# fastapi_course

./: README.md  docker-compose.yaml  index.html  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_12_21_1620-43f1d5e15f00_соcreate_tables.py  2023_12_21_1813-a382c99b20a4_update_product.py  2023_12_26_2104-1c2ad1e19623_create_tables.py
app/: __init__.py  exceptions.py  index.html  main.py  models.py  sample_products.py
app/db_config/: __init__.py  config.py  db_settings.py
app/models/: __init__.py  base.py  config.py  feedback.py  product.py  todo.py  user.py  users.py
app/products/: views.py
app/schemas/: __init__.py  productschema.py  schemafeedback.py  todoschema.py  userschema.py
app/todos/: views.py
app/user/: auth.py  views.py
tests/: test_app.py
